--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
-  "CONTRACT_ADDRESS": "0xCee9d8dc50cF2746dd38A018E634d98Da2DCF364",
+  "CONTRACT_ADDRESS": "0x52d3d38ceca694c3dd163a85ef8a08e0edc7b07b",
   "SCAN_LINK": "https://etherscan.io/address/0xCee9d8dc50cF2746dd38A018E634d98Da2DCF364",
   "NETWORK": {
     "NAME": "Ethereum",
     "SYMBOL": "Eth",
-    "ID": 1
+    "ID": 5
   },
-  "NFT_NAME": "Metagirl",
-  "SYMBOL": "MTG",
-  "MAX_SUPPLY": 10000,
-  "WEI_COST": 69000000000000000,
-  "DISPLAY_COST": 0.069,
+  "NFT_NAME": "ILEX",
+  "SYMBOL": "ILEX POLEMEN",
+  "MAX_SUPPLY": 3000,
+  "WEI_COST": 10000000000000000,
+  "DISPLAY_COST": 0.01,
   "GAS_LIMIT": 500000,
   "MARKETPLACE": "OPENSEA",
   "MARKETPLACE_LINK": "https://opensea.io/",
